fixed some pasapalabra-html issues

--- a/staff/alex-park/precourse/pasapalabra-2/index.html
+++ b/staff/alex-park/precourse/pasapalabra-2/index.html
@@ -25,10 +25,16 @@
             <div class="maintitle" id="mainbutton"><b>EMPEZAR PASAPALABRA</b></div>
             <div><hr></div>
             <div class="mainbuttons">
-                <div class="definitions" id="definitions">
-                    <p>Basado en el exitoso concurso de televisión Pasapalabra de Telecinco, las normas son muy sencillas:</p>
-                    <p>Se mostraran unas definiciones por pantalla y el usuario deberá responder con la palabra a la que corresponden. El usuario tiene la opción de decir Pasapalabra y dejar esa definición para más adelante.</p>
-                    <p>El programa es sensible a la acentuación, así que debe introducir la palabra con tilde. Dicho esto, ¡que comience el juego!</p>
+                <div class="textblock" id="textblock">
+                    <div class="answercheck" id="answercheck">
+                        <p>¡Buena suerte!</p>
+                    </div>
+                    <hr>
+                    <div class="definitions" id="definitions">
+                        <p>Basado en el exitoso concurso de televisión Pasapalabra de Telecinco, las normas son muy sencillas:</p>
+                        <p>Se mostraran unas definiciones por pantalla y el usuario deberá responder con la palabra a la que corresponden. El usuario tiene la opción de decir Pasapalabra y dejar esa definición para más adelante.</p>
+                        <p>El programa es sensible a la acentuación, así que debe introducir la palabra con tilde. Dicho esto, ¡que comience el juego!</p>
+                    </div>
                 </div>
                 <div class="buttons">
                     <form id='submit'>
