--- a/staff/lisandro-bertoli/semantic-html/blog-post.html
+++ b/staff/lisandro-bertoli/semantic-html/blog-post.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <figure>
@@ -14,13 +16,21 @@
         </figure>
         <nav>
             <link rel="stylesheet" href="">
-                <h1></h1>
-            </link>    
+            <h2></h2>
+            </link>
             <ul>
-                <li><link rel="stylesheet" href=""></li>
-                <li><link rel="stylesheet" href=""></li>
-                <li><link rel="stylesheet" href=""></li>
-                <li><link rel="stylesheet" href=""></li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
             </ul>
             <section>
                 <form action="">
@@ -42,7 +52,32 @@
             <h3></h3>
             <p></p>
         </aside>
-    </main> 
+    </main>
+    <section>
+        <header>
+            <h2></h2>
+        </header>
+        <ul>
+            <li>
+                <article>
+                    <h4></h4>
+                    <p></p>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h4></h4>
+                    <p></p>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h4></h4>
+                    <p></p>
+                </article>
+            </li>
+        </ul>
+    </section>
     <footer>
         <nav>
             <ul>
@@ -53,4 +88,5 @@
         </nav>
     </footer>
 </body>
+
 </html>
