--- a/staff/lisandro-bertoli/semantic-html/blog-landing.html
+++ b/staff/lisandro-bertoli/semantic-html/blog-landing.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <figure>
@@ -14,13 +16,21 @@
         </figure>
         <nav>
             <link rel="stylesheet" href="">
-                <h1></h1>
-            </link>    
+            <h2></h2>
+            </link>
             <ul>
-                <li><link rel="stylesheet" href=""></li>
-                <li><link rel="stylesheet" href=""></li>
-                <li><link rel="stylesheet" href=""></li>
-                <li><link rel="stylesheet" href=""></li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
             </ul>
             <section>
                 <form action="">
@@ -28,43 +38,50 @@
                 </form>
             </section>
         </nav>
-    </header>    
-        <main>
-            <section>
-                <nav>
-                    <ul>
-                        <li><link rel="stylesheet" href=""></li>
-                        <li><link rel="stylesheet" href=""></li>
-                        <li><link rel="stylesheet" href=""></li>
-                        <li><link rel="stylesheet" href=""></li>      
-                    </ul>
-                </nav>
-            </section>
-            <section>
-                <h1></h1>
-                <article>
-                    <h2></h2>
-                    <p></p>
-                </article>
-                <article>
-                    <h2></h2>
-                    <p></p>
-                </article>
-                <article>
-                    <h2></h2>
-                    <p></p>   
-                </article>
-            </section>  
-        </main>
-        <footer>
-            <nav>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </nav>
-        </footer>
-    
+    </header>
+    <main>
+        <section>
+            <ul>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+                <li>
+                    <link rel="stylesheet" href="">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h1></h1>
+            <article>
+                <h2></h2>
+                <p></p>
+            </article>
+            <article>
+                <h2></h2>
+                <p></p>
+            </article>
+            <article>
+                <h2></h2>
+                <p></p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </footer>
+
 </body>
+
 </html>
