--- a/staff/enric-pedros/semantic-html/skylab-why-code.html
+++ b/staff/enric-pedros/semantic-html/skylab-why-code.html
@@ -26,16 +26,48 @@
          <li></li>
      </ul>    
  </header>
-  
-<footer>
-    <address>
-     <img src="logo" alt="">       
-    </address>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+  <main>
+      <header>
+          <img src="" alt="">
+          <h1></h1>
+      </header>
+      
+      <section>
+          <h3></h3>
+          <p></p>
+        </section>
+        <section>
+            <h3></h3>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
+        <section>
+            <h3></h3>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </section>
+    <article>
+    </main>
+    <footer>
+        <address>
+            <img src="logo" alt="">       
+        </address>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
         <li></li>
         <li></li>
         <li></li>
