--- a/staff/enric-pedros/semantic-html/skylab-companies.html
+++ b/staff/enric-pedros/semantic-html/skylab-companies.html
@@ -27,8 +27,54 @@
      </ul>    
  </header>
   <main>
-    
-
+    <header>
+        <h1></h1>
+    </header>
+   <h2></h2>
+   <section>
+       <h3></h3>
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+   </section> 
+   <section>
+       <h3></h3>
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+   </section>
+   <section>
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="">
+   </section>
+   <section>
+       <h1></h1>
+       <img src="" alt="">
+       <p></p>
+   </section>
+   <section>
+       <h3></h3>
+       <img src="" alt="">
+       <p></p>
+       <p></p>
+       <p></p>
+   </section>
   </main>
 <footer>
     <address>
