--- a/staff/marc-salas/semantic-html/skylab-faculty.html
+++ b/staff/marc-salas/semantic-html/skylab-faculty.html
@@ -16,7 +16,42 @@
                 <p></p>
                 <nav></nav>
             </section>
-            
+            <section>
+                <article>
+                    <p></p>
+                    <h2></h2>
+                    <p></p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <p></p>
+                </article>
+                <article>
+                    <ul></ul>
+                    <p></p>
+                </article>
+            </section>
+            <section>
+                <h2></h2>
+                <p></p>
+            </section>
+            <section>
+                <article>
+                    <h3></h3>
+                    <p></p>
+                </article>
+                <article>
+                    <ul></ul>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h3></h3>
+                    <p></p>
+                    <img src="" alt="">
+                </article>
+            </section>
         </main>
         <footer>
             <h3></h3>
