--- a/staff/dario-fernandez/semantic-html/ecomerce-landing.html
+++ b/staff/dario-fernandez/semantic-html/ecomerce-landing.html
@@ -41,6 +41,7 @@
                 <figure></figure>
                 <h3></h3>
                 <p></p>
+                <strong></strong>
                 <button></button>
             </article>
         </section>
@@ -49,6 +50,7 @@
                 <figure></figure>
                 <h3></h3>
                 <p></p>
+                <strong></strong>
                 <button></button>
             </article>
         </section>
@@ -57,6 +59,7 @@
                 <figure></figure>
                 <h3></h3>
                 <p></p>
+                <strong></strong>
                 <button></button>
             </article>
         </section>
@@ -66,6 +69,7 @@
                 <figure></figure>
                 <h3></h3>
                 <p></p>
+                <strong></strong>
                 <button></button>
             </article>
         </section>
