--- a/staff/sofia-costa/semantic-html/skylab-courses.html
+++ b/staff/sofia-costa/semantic-html/skylab-courses.html
@@ -22,6 +22,7 @@
                 <IMG>
                 <H1></H1>
             </SECTION>
+            <NAV></NAV>
             <ARTICLE>
                 <SECTION>
                     <H3></H3>
