--- a/staff/sergi-bittan/semantic-html/skylab-landing.html
+++ b/staff/sergi-bittan/semantic-html/skylab-landing.html
@@ -1,5 +1,38 @@
 <HTML>
 	<HEAD>
+	</HEAD>
+	<BODY>
+				<HEADER>
+				</HEADER>
+				<NAV>
+				</NAV>
+			<MAIN>
+							<SECTION>
+							</SECTION>
+							<SECTION>
+							</SECTION>
+							<SECTION>
+							</SECTION>
+										<ARTICLE>
+										</ARTICLE>
+										<ARTICLE>
+										</ARTICLE>
+										<ARTICLE>
+										</ARTICLE>
+			</MAIN>
+				<FOOTER>
+				</FOOTER>
+	</BODY>
+</HTML>
+
+
+
+
+
+
+
+<!-- <HTML>
+	<HEAD>
 		<SCRIPT>
 		</SCRIPT>
 		<SCRIPT>
@@ -909,4 +942,4 @@
 		<NOSCRIPT>
 		</NOSCRIPT>
 	</BODY>
-</HTML>
+</HTML> -->
