--- a/staff/lisandro-bertoli/layouts-challenge/flex.html
+++ b/staff/lisandro-bertoli/layouts-challenge/flex.html
@@ -16,37 +16,97 @@
                 display: flex;
                 flex-direction: column;
                 border: 1px solid black;
-                height: 99vh;
-                width: 99vw;
+                height: 100vh;
+                width: 100vw;
             }
 
-            .header {
 
-                height: 15%
-            }
             .mid-container{
                 display: flex;
-                flex-direction: row;
-                height: 70%;
+                flex-direction: column;
+                height: 100%;
         
             }
 
-            .nav, .main, .aside {
+            .main {
                 border: 1px solid black;
                 height: 100%;                
             }
 
-            .nav, .aside {
-                width: 20%;
-            }
-
             .main {
-                width: 60%;
+                width: 100%;
+                height: 80%;
             }
 
-            .footer {
-                height: 15%;
+            .header, .footer, .nav, .aside {
+                height: 10%;
+                width: 100%;
+                border: solid 1px black;
+            }
 
+            @media only screen and (min-width: 768px) {
+
+                .mid-container {
+                    height: 80%;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+                .main {
+                    width: 70%;
+                    height: 88.5%;
+                }
+
+                .nav {
+                    width: 100%;
+                    height: 11%;
+                }
+
+                .aside{
+                    height: 88.5%;
+                    width: 29%;
+                }
+
+                .header, .footer {
+                    height: 10%;
+                }
+
+            }
+
+            @media only screen and (min-width: 1024px) {
+                .main-container {
+                    margin: 0 auto;
+                    flex-direction: column;
+                    border: 1px solid black;
+                    height: 100vh;
+                    width: 100vw;
+                }
+
+                .mid-container{
+                    flex-direction: column;
+                    height: 70%;
+                }
+
+                .nav, .main, .aside {
+                    border: 1px solid black;
+                    height: 100%;                
+                }
+
+                .nav, .aside {
+                    width: 20%;
+                }
+
+                .header {
+                    height: 15%;
+                }
+
+                .main {
+                   width: 60%;
+                }   
+
+                .footer {
+                    height: 15%;
+                }
 
             }
 
