--- a/staff/lisandro-bertoli/layouts-challenge/grid.html
+++ b/staff/lisandro-bertoli/layouts-challenge/grid.html
@@ -44,7 +44,7 @@
 				height: 100vh;
 				width: 100vw;
 				display: grid;
-				grid-template-columns: 100%;
+				grid-template-columns: auto;
 				grid-template-rows: 10% 10% 60% 10% 10%;
 				grid-template-areas:
 					'header'
@@ -56,11 +56,6 @@
 
 			@media only screen and (min-width: 768px) {
 				.grid-container {
-					border: 1px solid black;
-					height: 100vh;
-					width: 100vw;
-					display: grid;
-					grid-template-columns: 25% 25% 25% 25%;
 					grid-template-rows: 10% 10% 70% 10%;
 					grid-template-areas:
 						'header header header header'
@@ -72,10 +67,6 @@
 
 			@media only screen and (min-width: 1024px) {
 				.grid-container {
-					border: 1px solid black;
-					height: 100vh;
-					width: 100vw;
-					display: grid;
 					grid-template-columns: 25% 25% 25% 25%;
 					grid-template-rows: 15% 70% 15%;
 					grid-template-areas:
