--- a/staff/marc-salas/instagram/profile.html
+++ b/staff/marc-salas/instagram/profile.html
@@ -25,11 +25,49 @@
     </header>
     <main class="profile">
         <section class="profile__info">
-            <div>IMG</div>
-            <h2>Name Name</h2>
-            <SECTIon>Editar Perfil</SECTIon>
+            <div>
+                <div>IMG</div>
+                <p>namename</p>
+            </div>
+            <div>
+                <h2>Name Name</h2>
+                <section>Editar Perfil</section>
+            </div>
+        </section>
+        <section class="profile__aditional-info">
+            <p>A</p>
+            <p>B</p>
+            <p>C</p>
+        </section>
+        <section class="profile__posts-info">
+            <p>A</p>
+            <p>B</p>
+            <p>C</p>
+            <p>D</p>
+        </section>
+        <section class="profile__posts">
+            <div>M</div>
+            <div>A</div>
+            <div>R</div>
+            <div>C</div>
+            <div>S</div>
+            <div>A</div>
+            <div>L</div>
+            <div>A</div>
+            <div>S</div>
         </section>
     </main>
+    <footer class="end-page">
+        <ul class="end-page__info">
+            <li>Hola</li>
+            <li>Buenas</li>
+            <li>Tardes</li>
+            <li>Compañero</li>
+            <li>De viaje</li>
+            <li>Como</li>
+            <li>Estas</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
