--- a/staff/marc-salas/nike/results.html
+++ b/staff/marc-salas/nike/results.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header class="head">
+
+<body>
+    <header class="head">
         <figure class="head__logo-nike">
             <i class="fas fa-check"></i>
             <img src="" alt="">
@@ -25,12 +28,19 @@
                 </button>
             </nav>
         </section>
-</header>
-<body>
-    <main class="page">
-
+    </header>
+    <main class="results">
+        <header class="results__header">
+            <h2 class="results__header-title">
+                Resultado para "tangas"
+            </h2>
+            <nav class="results__header-filter">
+                <i class="fas fa-list-ul"></i>
+            </nav>
+        </header>    
     </main>
-    
 </body>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 </html>
