results products done

--- a/staff/marc-salas/nike/results.html
+++ b/staff/marc-salas/nike/results.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -37,6 +38,152 @@
             <nav class="results__header-filter">
                 <i class="fas fa-list-ul"></i>
             </nav>
+        </header>
+        <header class="results__products">
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
+            <article class="product">
+                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <p class="product__name">
+                    Tanga Max Air
+                </p>
+                <p class="product__especification">
+                    Tanga elàstico transparente
+                </p>
+                <p class="product__price">
+                    10€
+                </p>
+            </article>
         </header>    
     </main>
 </body>
