results static done without reactive

--- a/staff/marc-salas/nike/results.html
+++ b/staff/marc-salas/nike/results.html
@@ -41,7 +41,7 @@
         </header>
         <header class="results__products">
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -53,7 +53,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -65,7 +65,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -77,7 +77,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -89,7 +89,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -101,7 +101,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -113,7 +113,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -125,7 +125,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -137,7 +137,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -149,7 +149,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -161,7 +161,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -173,7 +173,7 @@
                 </p>
             </article>
             <article class="product">
-                <img src="https://dummyimage.com/185x185/ccdde0/ffffff&text=nike+tangas" alt="">
+                <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
                     Tanga Max Air
                 </p>
@@ -184,8 +184,50 @@
                     10€
                 </p>
             </article>
-        </header>    
+        </header>
     </main>
+    <footer class="footer">
+        <section class="footer__list">
+            <nav class="footer__map">
+                <ul>
+                    <li>TARJETAS DE REGALO
+                    <li>TIENDAS MAS CERCANAS</li>
+                    <li>REGISTRATE</li>
+                    <li>HAZTE MIEMBROS</li>
+                    <li>DESCUENTO PARA ESTUDIANTES</li>
+                    <li>COMENTARIOS SOBRE LA WEB</li>
+                </ul>
+            </nav>
+            <nav class="footer__faqs">
+                <ul>
+                    <li>OBTENER AYUDA</li>
+                    <li>ACERCA DE NIKE</li>
+                </ul>
+            </nav>
+        </section>
+        <section class="footer__social">
+            <nav class="footer__social-media">
+                <ul>
+                    <li><i class="fab fa-twitter-square"></i></li>
+                    <li><i class="fab fa-facebook-square"></i></li>
+                    <li><i class="fab fa-youtube"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                </ul>
+            </nav>
+        </section>
+        <section class="footer__extra">
+            <section class="footer__location">
+                Catalunya
+            </section>
+            <nav class="footer__legal">
+                <ul>
+                    <li>Guias</li>
+                    <li>Condiciones de uso</li>
+                    <li>Aviso legal</li>
+                </ul>
+            </nav>
+        </section>
+    </footer>
 </body>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
