--- a/staff/marc-salas/nike/results.html
+++ b/staff/marc-salas/nike/results.html
@@ -39,7 +39,33 @@
                 <i class="fas fa-list-ul"></i>
             </nav>
         </header>
-        <header class="results__products">
+        <section class="results__filter">
+            <nav class="filter__list">
+                <ul>
+                    <il>Hombre</il>
+                    <il>Mujer</il>
+                </ul>
+            </nav>
+            <nav class="filter__list">
+                <ul>
+                    <il>Para niño</il>
+                    <il>Para niña</il>
+                </ul>
+            </nav>
+            <nav class="filter__color">
+                <ul>
+                    <li>O</li>
+                    <li>O</li>
+                    <li>O</li>
+                    <li>O</li>
+                    <li>O</li>
+                    <li>O</li>
+                    <li>O</li>
+                    <li>O</li>
+                </ul>
+            </nav>
+        </section>
+        <section class="results__products">
             <article class="product">
                 <img src="https://dummyimage.com/450x450/ccdde0/ffffff&text=nike+tangas" alt="">
                 <p class="product__name">
@@ -184,7 +210,7 @@
                     10€
                 </p>
             </article>
-        </header>
+        </section>
     </main>
     <footer class="footer">
         <section class="footer__list">
