end of page results

--- a/staff/marc-salas/nike/results.html
+++ b/staff/marc-salas/nike/results.html
@@ -124,15 +124,34 @@
                 </ul>
             </nav>
             <nav class="filter__color">
-                <ul>
-                    <li>O</li>
-                    <li>O</li>
-                    <li>O</li>
-                    <li>O</li>
-                    <li>O</li>
-                    <li>O</li>
-                    <li>O</li>
-                    <li>O</li>
+                <section class="filter__color-title">
+                    <p>Color</p>
+                    <button>
+                        <i class="fas fa-angle-up"></i>
+                    </button>
+                </section>
+                <ul class="filter__color-options">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </nav>
+            <nav class="filter__list">
+                <section class="filter__list-title">
+                    <p>Marca</p>
+                    <button>
+                        <i class="fas fa-angle-up"></i>
+                    </button>
+                </section>
+                <ul class="filter__list-options">
+                    <il>Nike</il>
+                    <il>Nikieunder</il>
+                    <il>Nikechina</il>
                 </ul>
             </nav>
         </section>
@@ -318,6 +337,9 @@
             </section>
             <nav class="footer__legal">
                 <ul>
+                    <li>Guias</li>
+                    <li>Condiciones de uso</li>
+                    <li>Aviso legal</li>
                     <li>Guias</li>
                     <li>Condiciones de uso</li>
                     <li>Aviso legal</li>
