--- a/staff/monica-morales/arrays/index.html
+++ b/staff/monica-morales/arrays/index.html
@@ -14,9 +14,21 @@
     <script src="concat-demo.js"></script>
 
     <script src="includes.js"></script>
-    <script src="includes-demo.js"></script>
+    <script src="includes.demo.js"></script>
 
     <script src="pop.js"></script>
     <script src="pop-demo.js"></script>
+
+    <script src="every.js"></script>
+    <script src="every.demo.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.demo.js"></script>
+
+    <script src="find.js"></script>
+    <script src="find.demo.js"></script>
+
+    <script src="indexOf.js"></script>
+    <script src="indexOf.demo.js"></script>
 </body>
 </html>
