add testing to arrays challenge

--- a/staff/manuel-barzi/arrays/index.html
+++ b/staff/manuel-barzi/arrays/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <script src="for-each.js"></script>
-    <script src="for-each.demo.js"></script>
+    <!-- <script src="for-each.demo.js"></script> -->
+    <script src="for-each.test.js"></script>
 
     <script src="push.js"></script>
-    <script src="push.demo.js"></script>
+    <!-- <script src="push.demo.js"></script> -->
+    <script src="push.test.js"></script>
 </body>
 </html>
