reorganized folder. added tests for concat and push

--- a/staff/lisandro-bertoli/arrays/index.html
+++ b/staff/lisandro-bertoli/arrays/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Document</title>
-	</head>
-	<body>
-		<script src="concat.js"></script>
-		<script src="concat.test.js"></script>
-		<!-- <script src="concat-demo.js"></script> -->
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>Document</title>
+</head>
+
+<body>
+	<script src="./concat/concat.js"></script>
+	<script src="./concat/concat.test.js"></script>
+	<!-- <script src="./concat/concat-demo.js"></script> -->
+
+	<script src="./push/push.js"></script>
+	<script src="./push/push.test.js"></script>
+	<!-- <script src="./push/push-demo.js"></script> -->
+</body>
+
 </html>
