add test for function every

--- a/staff/lisandro-bertoli/arrays/index.html
+++ b/staff/lisandro-bertoli/arrays/index.html
@@ -16,6 +16,10 @@
 	<script src="./push/push.js"></script>
 	<script src="./push/push.test.js"></script>
 	<!-- <script src="./push/push-demo.js"></script> -->
+
+	<script src="./every/every.js"></script>
+	<script src="./every/every.test.js"></script>
+	<!-- <script src="./every/every-demo.js"></script> -->
 </body>
 
 </html>
