--- a/staff/monica-morales/arrays/index.html
+++ b/staff/monica-morales/arrays/index.html
@@ -12,6 +12,7 @@
 
     <script src="concat.js"></script>
     <script src="concat-demo.js"></script>
+    <script src="concat.test.js"></script>
 
     <script src="includes.js"></script>
     <script src="includes.demo.js"></script>
@@ -21,14 +22,21 @@
 
     <script src="every.js"></script>
     <script src="every.demo.js"></script>
+    <script src="every.test.js"></script>
 
     <script src="filter.js"></script>
     <script src="filter.demo.js"></script>
+    <script src="filter.test.js"></script>
 
     <script src="find.js"></script>
     <script src="find.demo.js"></script>
 
     <script src="indexOf.js"></script>
     <script src="indexOf.demo.js"></script>
+
+    <script src="map.js"></script>
+    <script src="map.test.js"></script>
+
+    
 </body>
 </html>
