--- a/staff/marc-salas/arrays/index.html
+++ b/staff/marc-salas/arrays/index.html
@@ -15,6 +15,29 @@
     <!--<script src="every-demo.js"></script> -->
     <script src="every-test.js"></script>
 
+    <script src="flat.js"></script>
+    <!--<script src="flat-demo.js"></script> -->
+    <script src="flat-test.js"></script>
+
+    <script src="push.js"></script>
+    <!--<script src="push-demo.js"></script> -->
+    <script src="push-test.js"></script>
+
+    <script src="splice.js"></script>
+    <!--<script src="splice-demo.js"></script> -->
+    <script src="splice-test.js"></script>
+
+    <script src="reverse.js"></script>
+    <!--<script src="reverse-demo.js"></script> -->
+    <script src="reverse-test.js"></script>
+
+    <script src="filter.js"></script>
+    <!--<script src="filter-demo.js"></script> -->
+    <script src="filter-test.js"></script>
+
+    <script src="fill.js"></script>
+    <!--<script src="filter-demo.js"></script> -->
+    <script src="fill-test.js"></script>
 
 </body>
 </html>
