add reduce() and test

--- a/staff/dario-fernandez/arrays/index.html
+++ b/staff/dario-fernandez/arrays/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Array Methods TESTS</h1>
-    <h3>Open the browser console to watch the tests ∫result</h3>
+    <h3>Open the browser console to watch the tests result</h3>
     <p>We are cloning all Javascript array methods using only plain JS.</p>
 
     <script src="fill.js"></script>
@@ -19,6 +19,9 @@
     <!-- <script src="find-index.demo.js"></script> -->
     <script src="slice.js"></script>
     <script src="slice.test.js"></script>
+    <script src="reduce.js"></script>
+    <script src="reduce.test.js"></script>
+    
 
 </body>
 </html>
