finished concat tests

--- a/staff/lisandro-bertoli/arrays/index.html
+++ b/staff/lisandro-bertoli/arrays/index.html
@@ -20,6 +20,10 @@
 	<script src="./every/every.js"></script>
 	<script src="./every/every.test.js"></script>
 	<!-- <script src="./every/every-demo.js"></script> -->
+
+	<script src="./reduce/reduce.js"></script>
+	<!-- <script src="./reduce/reduce.test.js"></script> -->
+	<script src="./reduce/reduce-demo.js"></script>
 </body>
 
 </html>
