--- a/staff/monica-morales/arrays/index.html
+++ b/staff/monica-morales/arrays/index.html
@@ -15,7 +15,7 @@
     <script src="concat.test.js"></script>
 
     <script src="includes.js"></script>
-    <script src="includes.demo.js"></script>
+    <script src="includes.test.js"></script>
 
     <script src="pop.js"></script>
     <script src="pop-demo.js"></script>
@@ -25,14 +25,13 @@
     <script src="every.test.js"></script>
 
     <script src="filter.js"></script>
-    <script src="filter.demo.js"></script>
     <script src="filter.test.js"></script>
 
     <script src="find.js"></script>
-    <script src="find.demo.js"></script>
+    <script src="find.test.js"></script>
 
     <script src="indexOf.js"></script>
-    <script src="indexOf.demo.js"></script>
+    <script src="indexOf.test.js"></script>
 
     <script src="map.js"></script>
     <script src="map.test.js"></script>
