update to array methods

--- a/staff/federico-lacabaratz/arrays/index.html
+++ b/staff/federico-lacabaratz/arrays/index.html
@@ -24,16 +24,20 @@
     <!-- <script src="every.demo.js"></script> -->
 
     <script src="filter.js"></script>
-    <!-- <script src="filter.test.js"></script> -->
+    <script src="filter.test.js"></script>
     <!-- <script src="filter.demo.js"></script> -->
 
     <script src="from.js"></script>
-    <!-- <script src="from.test.js" ></script> -->
+    <script src="from.test.js" ></script>
     <!-- <script src="from.demo.js"></script> -->
 
     <script src="includes.js"></script>
-    <!-- <script src="includes.test.js"></script> -->
+    <script src="includes.test.js"></script>
     <!-- <script src="includes.demo.js"></script> -->
+
+    <script src="map.js"></script>
+    <script src="map.test.js"></script>
+    <!-- <script src="map.demo.js"></script> -->
 
     <script src="pop.js"></script>
     <!-- <script src="pop.test.js"></script> -->
@@ -51,8 +55,5 @@
     <!-- <script src="indexOf.test.js"></script> -->
     <!-- <script src="indexOf.demo.js"></script> -->
 
-    <script src="map.js"></script>
-    <script src="map.test.js"></script>
-    <!-- <script src="map.demo.js"></script> -->
 </body>
 </html>
