+ reduce and errors

--- a/staff/marc-salas/arrays/index.html
+++ b/staff/marc-salas/arrays/index.html
@@ -39,5 +39,9 @@
     <!--<script src="filter-demo.js"></script> -->
     <script src="fill-test.js"></script>
 
+    <script src="reduce.js"></script>
+    <!--<script src="filter-demo.js"></script> -->
+    <script src="reduce-test.js"></script>
+
 </body>
 </html>
