--- a/staff/manuel-barzi/arrays/index.html
+++ b/staff/manuel-barzi/arrays/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="itest-1.0.0.js"></script>
+    
     <script src="for-each.js"></script>
     <!-- <script src="for-each.demo.js"></script> -->
     <script src="for-each.test.js"></script>
@@ -14,5 +16,8 @@
     <script src="push.js"></script>
     <!-- <script src="push.demo.js"></script> -->
     <script src="push.test.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.test.js"></script>
 </body>
 </html>
